fixed blog on mobile

--- a/wp-content/themes/snoobe/assets/less/partials/blog.less
+++ b/wp-content/themes/snoobe/assets/less/partials/blog.less
@@ -8,7 +8,13 @@
 		font-size: 24px;
 	}
 }
-
+.touch {
+	.main-blog-content {
+		@media only screen and (max-width : 620px) {
+			padding-right: 0;
+		}
+	}
+}
 .blog-area {
 	position: relative;
 	overflow: hidden;
